add button to index.html with javascript function

--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,26 @@
-Hello, world!
+<!doctype HTML>
+<html>
+  <head>
+    <meta charset="utf-8" />
+  </head>
+  <body>
+    <p>Hello, World!</p>
+    <button type="button" onclick="getHomeTimeline()">Get Home Timeline</button>
+    <div>
+      <p id="timeline"></p>
+
+      <script>
+        function getHomeTimeline() {
+          var xhttp = new XMLHttpRequest();
+          xhttp.onreadystatechange = function() {
+            if (this.readyState == 4 && this.status == 200) {
+              document.getElementById("timeline").innerHTML = this.responseText;
+            }
+          };
+          xhttp.open("GET", "http://localhost:8080/api/1.0/twitter/timeline",true);
+          xhttp.send();
+        }
+      </script>
+    </div>
+  </body>
+</html>
