--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
               if (this.status == 200)
                 document.getElementById("timeline").innerHTML = this.responseText;
               else
-                alert("Unable to fetch home timeline.\n");
+                alert("Unable to fetch home timeline.");
             }
           };
           xhttp.open("GET", "http://localhost:8080/api/1.0/twitter/timeline",true);
