--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,12 @@
           var xhttp = new XMLHttpRequest();
           xhttp.onreadystatechange = function() {
             if (this.readyState == XMLHttpRequest.DONE)  {
-              if (this.status == 200)
+              if (this.status == 200) {
                 document.getElementById("timeline").innerHTML = this.responseText;
-              else
-                alert("Unable to fetch home timeline.");
+              }
+              else {
+                document.getElementById("timeline").innerHTML = "Unable to get home timeline, please try again later.";
+              }
             }
           };
           xhttp.open("GET", "http://localhost:8080/api/1.0/twitter/timeline",true);
