--- a/src/index.html
+++ b/src/index.html
@@ -6,19 +6,29 @@
   <body>
     <p>Hello, World!</p>
     <button type="button" onclick="getHomeTimeline()">Get Home Timeline</button>
-    <div>
-      <p id="timeline"></p>
+    <div id="divTimeline">
+      <p id="pTimeline"></p>
 
       <script>
+        function appendTweet(tweet) {
+            console.log(tweet);
+            var div = document.createElement("div");
+            //var node = document.create
+        }
+
         function getHomeTimeline() {
           var xhttp = new XMLHttpRequest();
           xhttp.onreadystatechange = function() {
             if (this.readyState == XMLHttpRequest.DONE)  {
               if (this.status == 200) {
-                document.getElementById("timeline").innerHTML = this.responseText;
+                var obj = JSON.parse(this.responseText);
+                for (var i=0;i<obj.length;i++) {
+                    appendTweet(obj[i]);
+                }
+                //document.getElementById("timeline").innerHTML = obj;
               }
               else {
-                document.getElementById("timeline").innerHTML = "Unable to get home timeline, please try again later.";
+                document.getElementById("pTimeline").innerHTML = "Unable to get home timeline, please try again later.";
               }
             }
           };
