add images with color and links

--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,36 @@
     <button type="button" onclick="getHomeTimeline()">Get Home Timeline</button>
     <div id="divTimeline">
       <p id="pTimeline"></p>
-
       <script>
-        function appendTweet(tweet) {
-            console.log(tweet);
-            var tweetDiv = document.createElement("div");
-            var createdAt = document.createTextNode(new Date(tweet.createdAt));
-            var text = document.createTextNode(tweet.text);
-            tweetDiv.appendChild(createdAt);
-            tweetDiv.appendChild(text);
+        function appendTweet(tweet, color) {
+          console.log(tweet);
+          var tweetDiv = document.createElement("div");
+          if (color) {
+            tweetDiv.style.backgroundColor = "DarkSeaGreen";
+          }
+          // Append the image
+          var tweetImg = document.createElement("img");
+          tweetImg.src = tweet.user.profileImageURL;
+          tweetDiv.appendChild(tweetImg);
 
-            var element = document.getElementById("divTimeline");
-            element.appendChild(tweetDiv);
+          // Append the timestamp
+          var tweetSpan = document.createElement("span");
+          var createdAt = document.createTextNode(new Date(tweet.createdAt));
+          tweetSpan.appendChild(createdAt);
+          tweetDiv.appendChild(tweetSpan);
+
+          // Append the body of the tweet
+          var text = document.createTextNode(tweet.text);
+          tweetDiv.appendChild(text);
+
+          // Link the div to Twitter
+          tweetDiv.onclick = function() {
+            var urlPrefix = "https://twitter.com/TwitterAPI/status/";
+            window.open(urlPrefix + tweet.id);
+          }
+
+          var element = document.getElementById("divTimeline");
+          element.appendChild(tweetDiv);
         }
 
         function getHomeTimeline() {
@@ -29,7 +47,7 @@
               if (this.status == 200) {
                 var obj = JSON.parse(this.responseText);
                 for (var i=0;i<obj.length;i++) {
-                    appendTweet(obj[i]);
+                    appendTweet(obj[i], i % 2 == 0);
                 }
               }
               else {
