--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,11 @@
 <!doctype HTML>
 <html>
   <head>
-    <meta charset="utf-8" />
+    <link rel="stylesheet" href="styles/style.css" type="text/css">
+    <meta charset="utf-8">
   </head>
   <body>
+    <div id="title">Lab for Ben Lee</div>
     <button type="button" onclick="getHomeTimeline()">Get Home Timeline</button>
     <div id="divTimeline">
     </div>
