add circular images

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
 
         // Append the image
         var tweetImg = document.createElement("img");
+        tweetImg.setAttribute("class", "img-circle");
         tweetImg.src = tweet.user.profileImageURL;
         tweetDiv.appendChild(tweetImg);
 
