watch for icon changes, favicon stil broken

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <script type="text/javascript" src="/js/twitter.js" asnyc></script>
-    <link rel="shortcut icon" type"image/x-con" href="/assets/favicon.ico"/>
+    <link rel="icon" type"image/x-con" href="/assets/favicon.ico"/>
     <link id="stylesheet" rel="stylesheet" href="/styles/style.css" type="text/css">
   </head>
   <body>
