align button with tweets

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="title">Lab for Ben Lee</div>
-    <button type="button" onclick="getHomeTimeline()">Get Home Timeline</button>
+    <button id="getTimelineButton" type="button" onclick="getHomeTimeline()">Get Home Timeline</button>
     <div id="divTimeline">
     </div>
   </body>
