change divTimeline to class

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="title">Lab for Ben Lee</div>
     <button id="getTimelineButton" type="button" onclick="getHomeTimeline()">Get Home Timeline</button>
-    <div id="divTimeline">
+    <div class="divTimeline">
     </div>
   </body>
 </html>
