--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <link id="stylesheet" rel="stylesheet" href="styles/style.css" type="text/css">
   </head>
   <body>
-    <div id="title">Lab for Ben Lee</div>
-    <button id="getTimelineButton" type="button" onclick="getHomeTimeline()">Get Home Timeline</button>
+    <div class="title">Lab for Ben Lee</div>
+    <button class="getTimelineButton" type="button" onclick="getHomeTimeline()">Get Home Timeline</button>
     <div class="divTimeline" id="divTimeline">
     </div>
   </body>
