--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <script type="text/javascript" src="/js/twitter.js" asnyc></script>
     <link rel="icon" type"image/x-con" href="/assets/favicon.ico"/>
-    <link id="stylesheet" rel="stylesheet" href="/styles/style.css" type="text/css">
+    <link id="stylesheet" rel="stylesheet" href="/styles/css/style.css" type="text/css">
   </head>
   <body>
     <div class="title">Lab for Ben Lee</div>
