get timeline on page load

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type"image/x-con" href="/assets/favicon.ico"/>
     <link id="stylesheet" rel="stylesheet" href="/styles/css/style.css" type="text/css">
   </head>
-  <body>
+  <body onLoad="getHomeTimeline()">
     <div class="title">Lab for Ben Lee</div>
     <button class="getTimelineButton" type="button" onclick="getHomeTimeline()">Get Home Timeline</button>
     <div class="divTimeline" id="divTimeline">
