--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,6 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script type="text/javascript" src="/js/twitter.js" asnyc></script>
-    <script type="text/javascript" src="/js/helloWorld.js" asnyc></script>
-    <script src="https://unpkg.com/react@15/dist/react.js" async></script>
-    <script src="https://unpkg.com/react-dom@15/dist/react-dom.js" async></script>
-    <link id="stylesheet" rel="stylesheet" href="/styles/css/style.css" type="text/css">
   </head>
   <body>
     <link rel="icon" type"image/x-con" href="/assets/favicon.ico"/>
@@ -16,5 +11,10 @@
     <button class="getTimelineButton" type="button" onclick="getHomeTimeline()">Get Home Timeline</button>
     <div class="divTimeline" id="divTimeline">
     </div>
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script type="text/javascript" src="/js/helloWorld.js" asnyc></script>
+    <script type="text/javascript" src="/js/twitter.js" asnyc></script>
+   <link id="stylesheet" rel="stylesheet" href="/styles/css/style.css" type="text/css">
   </body>
 </html>
