uncomment timeline on load

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="utf-8">
   </head>
-  <body>
-    <link rel="icon" type"image/x-con" href="/assets/favicon.ico"/>
-      <!--<body onLoad="getHomeTimeline()">-->
+  <body onLoad="getHomeTimeline()">
     <div class="title">Lab for Ben Lee</div>
     <div id="reactComponent"></div>
     <button class="getTimelineButton" type="button" onclick="getHomeTimeline()">Get Home Timeline</button>
