add event listener for timeline

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,11 @@
     <link id="stylesheet" rel="stylesheet" href="/styles/css/style.css" type="text/css">
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <!--<script type="text/javascript" src="/js/bundle.js" async></script>-->
     <script type="text/javascript" src="/js/helloWorld.js" asnyc></script>
     <script type="text/javascript" src="/js/twitter.js" asnyc></script>
   </head>
-  <body onLoad="getHomeTimeline()">
+  <body>
     <div class="title">Lab for Ben Lee</div>
     <div id="reactComponent"></div>
     <button class="getTimelineButton" type="button" onclick="getHomeTimeline()">Get Home Timeline</button>
