add event listener to button

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="title">Lab for Ben Lee</div>
     <div id="reactComponent"></div>
-    <button class="getTimelineButton" type="button" onclick="getHomeTimeline()">Get Home Timeline</button>
+    <button class="getTimelineButton" id="getTimelineButton" type="button">Get Home Timeline</button>
     <div class="divTimeline" id="divTimeline">
     </div>
   </body>
