add component wrapper around all the tweets

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <div class="title">Lab for Ben Lee</div>
     <div id="reactComponent"></div>
     <div class="getTimelineButton" id="getTimelineButton" type="button"></div>
-    <div class="divTimeline" id="divTimeline">
+    <div class="root" id="root">
     </div>
   </body>
 </html>
