render TimelineContainer in root, remove explicit html button

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,7 @@
   </head>
   <body>
     <div class="title">Lab for Ben Lee</div>
-    <div id="reactComponent"></div>
-    <div class="getTimelineButton" id="getTimelineButton" type="button"></div>
-    <div class="root" id="root">
+    <div class="root" id="root"></div>
     </div>
   </body>
 </html>
